# kaptreebot

./: .env.dev  .env.prod  README.md  bot.py  pyproject.toml  test.py  语音调用.txt
go-cqhttp/: config.hjson  device.json
go-cqhttp-lazy-master/go-cqhttp-lazy-master/: LICENSE
go-cqhttp-v0.9.40-fix2-windows-amd64/: config.hjson
go-cqhttp-v0.9.40-fix2-windows-amd64/data/leveldb/: 000002.ldb  000009.ldb  LOG  MANIFEST-000004  MANIFEST-000011
go-cqhttp/data/leveldb/: 000028.ldb  000054.ldb  000055.ldb  000058.ldb  000080.ldb  000081.ldb  LOG  MANIFEST-000027  MANIFEST-000060  MANIFEST-000083
go-cqhttp_windows_amd64/: Windows.bat  config.json  config.yml  device.json  run.bat  session.token
go-cqhttp_windows_amd64/data/: image.db  video.db
go-cqhttp_windows_amd64/data/leveldb/: 000006.ldb  000009.ldb  000018.ldb  000021.ldb  000024.ldb  000046.ldb  000047.ldb  000050.ldb  000053.ldb  LOG  MANIFEST-000008  (+3 more)
go-cqhttp_windows_amd64/data/leveldb-v2/: 000045.ldb  000046.ldb  LOG  MANIFEST-000050
go-cqhttp_windows_amd64/logs/: 2021-08-12.log.1  2021-08-12.log.2  2021-08-12.log.3  2021-08-12.log.4  2021-08-14.log.1  2021-08-19.log.1  2021-08-19.log.2  2021-08-19.log.3  2021-08-19.log.4  2021-09-06.log.1  2021-09-06.log.2  2021-10-09.log.1  2021-10-09.log.2  2021-10-09.log.3  2021-10-09.log.4  2021-10-09.log.5  2021-10-09.log.6
kaptreebot/plugins/: APIfile.py  DreamOJ.py  OCR.py  TransPlugin.py  WeatherPlugin.py  addQQ.py  bilbili.py  cheat.py  daily.py  linuxstatus.py  ph.py  pokeme.py  soutu.py  test.py  tiangou.py  timeop.py  yuyinbao.py  zhiling.py  防撤回.py
